# whenworks

./: Makefile  README.md  model.yaml  schema.yaml  testmodel.ts
backend/: .gitignore  Cargo.toml  DOCS.md  README.md  index.html
backend/src/: args_parser.rs  database.rs  event.rs  example_data.json  hash.rs  logger.rs  macros.rs  main.rs  threads.rs
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  test.eslint.config.js  test.package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: event.ts  index.ts  model.ts
frontend/src/components/: AppButton.module.scss  AppButton.tsx  AppFlex.module.scss  AppFlex.tsx  AppGrid.module.scss  AppGrid.tsx  AppIcon.module.scss  AppIcon.tsx  AppModal.module.scss  AppModal.tsx  AppSection.module.scss  AppSection.tsx  AppTooltip.module.scss  AppTooltip.tsx  Button.module.css  Button.tsx  EventForm.tsx  Footer.module.scss  Footer.tsx  Header.module.css  Header.tsx  Modal.tsx  Textbox.module.css  Textbox.tsx
frontend/src/global/: _variables.scss  icons.ts  styles.scss
frontend/src/pages/: EventForm.module.css  EventForm.tsx  Testbed.tsx
frontend/src/sections/: EventForm.tsx  Header.module.css  Header.tsx
frontend/src/utils/: db_utils.ts  debug.ts  request.ts  utils.ts
