[package]
name = "schedule_thing"
version = "0.1.0"
edition = "2021"

[dependencies]
# encodng/decoding
base64 = "0.21.4"
bincode = "1.3.3"
flate2 = { version = "1.0.27", features = ["zlib"], default-features = false }

# serializing/deserializing
serde = { version = "^1.0", features = ["derive", "rc"] }
serde_json = "1.0.105"

# rand nums
libc = "0.2"

[profile.release.packages."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3 
codegen-units = 1
debug = false
strip = "all"

