[package]
name = "backend2"
version = "0.1.0"
edition = "2021"
authors = ["slbsh"]
license = "0BSD"

[dependencies]
axum = { version = "0.7", default-features = false, features = ["tokio", "query", "json", "http1"] }
tokio = { version = "1.40", default-features = false, features = ["rt-multi-thread", "net", "sync"] }

rand = "0.8"
base64 = "0.22"
bcrypt = "0.15"

serde = { version = "^1.0", default-features = false, features = ["rc", "std", "derive"] }
serde_json = "1.0"
bincode = "1.3"

[profile.release.package."*"]
opt-level = 3
lto = true
debug = false

[profile.release]
lto = true
opt-level = 3
debug = false
codegen-units = 1
