[package]
name = "whenworks-backend"
version = "0.1.0"
edition = "2021"
authors = ["slbsh"]
license = "0BSD"

[dependencies]
axum = { version = "0.7", default-features = false, features = ["tokio", "json", "http1"] }
tokio = { version = "1.41", default-features = false, features = ["rt-multi-thread", "io-util", "fs"] }
tower-http = { version = "0.6", features = ["cors"] }

rand = "0.8"
bcrypt = { version = "0.16", default-features = false, features = ["std"] }

serde = { version = "1.0", default-features = false, features = ["rc", "derive"] }
serde_json = "1.0"
bincode = "1.3"

[profile.release.package."*"]
opt-level = 3
debug = false

[profile.release]
lto = true
opt-level = 3
debug = false
codegen-units = 1
